@@ -131,8 +131,8 @@
       <div class="failure" id="failure_1">
         <div class="message"><pre>Mock 'poke me' expected :poke with (any args) once, but received it 0 times</pre></div>
         <div class="backtrace"><pre>./failing_examples/mocking_example.rb:13
-./spec/spec/runner/formatter/html_formatter_spec.rb:11
-./spec/spec/runner/formatter/html_formatter_spec.rb:8</pre></div>
+./spec/spec/runner/formatter/html_formatter_spec.rb:12
+./spec/spec/runner/formatter/html_formatter_spec.rb:9</pre></div>
       </div>
     </dd>
     <script type="text/javascript">makeProgressbarRed();</script>
@@ -143,8 +143,8 @@
         <div class="message"><pre>Mock 'one two three' received :three out of order</pre></div>
         <div class="backtrace"><pre>(eval):3:in `three'
 ./failing_examples/mocking_example.rb:22
-./spec/spec/runner/formatter/html_formatter_spec.rb:11
-./spec/spec/runner/formatter/html_formatter_spec.rb:8</pre></div>
+./spec/spec/runner/formatter/html_formatter_spec.rb:12
+./spec/spec/runner/formatter/html_formatter_spec.rb:9</pre></div>
       </div>
     </dd>
     <script type="text/javascript">makeProgressbarRed();</script>
@@ -154,8 +154,8 @@
       <div class="failure" id="failure_3">
         <div class="message"><pre>Mock 'don't talk to me' expected :any_message_at_all with (any args) 0 times, but received it once</pre></div>
         <div class="backtrace"><pre>./failing_examples/mocking_example.rb:28
-./spec/spec/runner/formatter/html_formatter_spec.rb:11
-./spec/spec/runner/formatter/html_formatter_spec.rb:8</pre></div>
+./spec/spec/runner/formatter/html_formatter_spec.rb:12
+./spec/spec/runner/formatter/html_formatter_spec.rb:9</pre></div>
       </div>
     </dd>
   </dl>
@@ -170,8 +170,8 @@
       <div class="failure" id="failure_4">
         <div class="message"><pre>&quot;RSpec is a\nbehavior driven development\nframework for Ruby\n&quot; should == &quot;RSpec is a\nbehaviour driven development\nframework for Ruby\n&quot;</pre></div>
         <div class="backtrace"><pre>./failing_examples/diffing_spec.rb:13
-./spec/spec/runner/formatter/html_formatter_spec.rb:11
-./spec/spec/runner/formatter/html_formatter_spec.rb:8</pre></div>
+./spec/spec/runner/formatter/html_formatter_spec.rb:12
+./spec/spec/runner/formatter/html_formatter_spec.rb:9</pre></div>
       </div>
     </dd>
     <script type="text/javascript">makeProgressbarRed();</script>
@@ -189,8 +189,8 @@ species=tortoise
 &gt;
 </pre></div>
         <div class="backtrace"><pre>./failing_examples/diffing_spec.rb:34
-./spec/spec/runner/formatter/html_formatter_spec.rb:11
-./spec/spec/runner/formatter/html_formatter_spec.rb:8</pre></div>
+./spec/spec/runner/formatter/html_formatter_spec.rb:12
+./spec/spec/runner/formatter/html_formatter_spec.rb:9</pre></div>
       </div>
     </dd>
   </dl>
@@ -225,7 +225,7 @@ species=tortoise
   </dl>
 </div>
 <div id="summary" class="failures"
-<p>Finished in <strong>0.015 seconds</strong></p>
+<p>Finished in <strong>0.013694 seconds</strong></p>
 <p id="totals">13 specifications, 5 failures</p>
 </div>
 </div>
